service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: app-name
  name: service-name
  namespace: your-namespace
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    deploymentconfig: dc-name #or deployment name
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
